# VSSynth

./: .gitignore  CMakeLists.txt  README.md  asset-manifest.json  index.html
VSynth/src/: Envelope.cpp  Envelope.h  SawTooth.cpp  SawTooth.h  Sine.cpp  Sine.h  Square.cpp  Square.h  Synthesizer.cpp  Synthesizer.h  Triangle.cpp  Triangle.h  Waveform.cpp  Waveform.h  Waveforms.cpp  Waveforms.h  main.cpp
docs/: Doxyfile  asset-manifest.json  index.html  manifest.json
docs/LandingPage/: index.html  package-lock.json  package.json
docs/doxygen/: Envelope_8h_source.html  Instrument_8h_source.html  MonophonicInstrument_8h_source.html  Notes_8h_source.html  Patches_8h_source.html  PolyphonicInstrument_8h_source.html  Sequencer_8h_source.html  SoundGenerator_8h_source.html  SynthMiddleware_8h_source.html  Synthesizer_8h_source.html  Tone_8h_source.html  VSSynth_8h_source.html  VSynth_8h_source.html  WAVWriter_8h_source.html  Waveforms_8h_source.html  annotated.html  classVSSynth_1_1Envelope-members.html  classVSSynth_1_1Envelope.html  classVSSynth_1_1Generators_1_1Instrument-members.html  classVSSynth_1_1Generators_1_1Instrument.html  classVSSynth_1_1Generators_1_1Instrument__coll__graph.map  classVSSynth_1_1Generators_1_1Instrument__coll__graph.md5  classVSSynth_1_1Generators_1_1Instrument__inherit__graph.map  classVSSynth_1_1Generators_1_1Instrument__inherit__graph.md5  classVSSynth_1_1Generators_1_1MonophonicInstrument-members.html  classVSSynth_1_1Generators_1_1MonophonicInstrument.html  classVSSynth_1_1Generators_1_1MonophonicInstrument__inherit__graph.map  classVSSynth_1_1Generators_1_1MonophonicInstrument__inherit__graph.md5  classVSSynth_1_1Generators_1_1PolyphonicInstrument-members.html  classVSSynth_1_1Generators_1_1PolyphonicInstrument.html  classVSSynth_1_1Generators_1_1PolyphonicInstrument__coll__graph.map  classVSSynth_1_1Generators_1_1PolyphonicInstrument__coll__graph.md5  classVSSynth_1_1Generators_1_1Sequencer-members.html  classVSSynth_1_1Generators_1_1Sequencer.html  classVSSynth_1_1Generators_1_1Sequencer__coll__graph.map  classVSSynth_1_1Generators_1_1Sequencer__coll__graph.md5  classVSSynth_1_1Generators_1_1Tone-members.html  classVSSynth_1_1Generators_1_1Tone.html  classVSSynth_1_1Generators_1_1Tone__coll__graph.md5  classVSSynth_1_1Generators_1_1Tone__inherit__graph.map  (+98 more)
docs/html/: Envelope_8h_source.html  Instrument_8h_source.html  Middleware_8h_source.html  MonophonicInstrument_8h_source.html  Notes_8h_source.html  Patches_8h_source.html  PolyphonicInstrument_8h_source.html  Sequencer_8h_source.html  SoundGenerator_8h_source.html  SynthMiddleware_8h_source.html  Synthesizer_8h_source.html  Tone_8h_source.html  WAVWriter_8h_source.html  Waveforms_8h_source.html  annotated.html  classVSynth_1_1Envelope-members.html  classVSynth_1_1Envelope.html  classVSynth_1_1Generators_1_1Instrument.html  classVSynth_1_1Generators_1_1Instrument__coll__graph.map  classVSynth_1_1Generators_1_1MonophonicInstrument.html  classVSynth_1_1Generators_1_1MonophonicInstrument__inherit__graph.md5  classVSynth_1_1Generators_1_1PolyphonicInstrument.html  classVSynth_1_1Generators_1_1PolyphonicInstrument__coll__graph.map  classVSynth_1_1Generators_1_1PolyphonicInstrument__inherit__graph.md5  classVSynth_1_1Generators_1_1Sequencer-members.html  classVSynth_1_1Generators_1_1Sequencer.html  classVSynth_1_1Generators_1_1Sequencer__coll__graph.md5  classVSynth_1_1Generators_1_1Tone-members.html  classVSynth_1_1Generators_1_1Tone.html  classVSynth_1_1Generators_1_1Tone__coll__graph.md5  classVSynth_1_1Instrument-members.html  classVSynth_1_1Instrument.html  classVSynth_1_1Instrument__coll__graph.dot  classVSynth_1_1Instrument__coll__graph.map  classVSynth_1_1Instrument__coll__graph.md5  classVSynth_1_1Instrument__inherit__graph.dot  classVSynth_1_1Instrument__inherit__graph.map  classVSynth_1_1Instrument__inherit__graph.md5  classVSynth_1_1Middleware-members.html  classVSynth_1_1Middleware.html  (+79 more)
docs/landing-page/: .eslintcache  package-lock.json  package.json
examples/LowFrequencyOscillator/: README.md
examples/MIDI/: LICENSE.midifile.txt  README.md  midifile_license.txt
examples/RecordTone/: README.md
examples/SequencedBeat/: README.md
examples/SimpleTone/: README.md
examples/midi/: README.md
examples/piano/: README.md
examples/sequenced_beat/: README.md
include/VSSynth/: SoundGenerator.h  SynthMiddleware.h  Synthesizer.h  VSSynth.h
include/VSynth/: Envelope.h  Instrument.h  SoundGenerator.h  SynthMiddleware.h  Synthesizer.h  WAVWriter.h  Waveforms.h
src/: Envelope.cpp  Instrument.cpp  SoundGenerator.cpp  Synthesizer.cpp  WAVWriter.cpp  Waveforms.cpp  main.cpp
src/Generators/: Instrument.cpp  MonophonicInstrument.cpp  PolyphonicInstrument.cpp  Sequencer.cpp  Tone.cpp
src/generators/: Instrument.cpp  MonophonicInstrument.cpp  PolyphonicInstrument.cpp  Sequencer.cpp  Tone.cpp
src/middleware/: WAVWriter.cpp
src/utils/: Envelope.cpp  Waveforms.cpp
static/js/: 153.0f9e9d99.chunk.js  153.0f9e9d99.chunk.js.map  154.cc8c89fc.chunk.js.map  main.df3c0362.chunk.js.map  react-syntax-highlighter_languages_refractor_abap.636c7047.chunk.js  react-syntax-highlighter_languages_refractor_apacheconf.78688b63.chunk.js  react-syntax-highlighter_languages_refractor_arff.841a14e0.chunk.js  react-syntax-highlighter_languages_refractor_aspnet.65e2d87f.chunk.js.map  react-syntax-highlighter_languages_refractor_autohotkey.9d3b9972.chunk.js.map  react-syntax-highlighter_languages_refractor_autoit.bd87eb38.chunk.js  react-syntax-highlighter_languages_refractor_bash.59b2872f.chunk.js.map  react-syntax-highlighter_languages_refractor_basic.151deb51.chunk.js.map  react-syntax-highlighter_languages_refractor_brainfuck.1dc3bf83.chunk.js  react-syntax-highlighter_languages_refractor_bro.7335548c.chunk.js  react-syntax-highlighter_languages_refractor_c.83ae6f30.chunk.js  react-syntax-highlighter_languages_refractor_clike.e346dfc9.chunk.js.map  react-syntax-highlighter_languages_refractor_clojure.fafc807e.chunk.js  (+98 more)
(+509 files in other folders)
